--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.1",
     "react-validation": "^3.0.7",
+    "tailwindcss": "^3.4.4",
     "validator": "^13.0.0"
   },
   "scripts": {
